route_t_association.tf
#-----------------------------------------Route table association -------------------------------

resource "aws_route_table_association" "rta_main" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.rt_main.id
}
